fix css on firefox

--- a/views/miamibeats.sass
+++ b/views/miamibeats.sass
@@ -1,12 +1,23 @@
 @font-face
   :font-family "TGL 31034-2"
   :src url('TGL_31034-2.ttf')
-body  
-  :width 80%
+html
+  :background black url('hdr.jpg')
+  :background-size cover
+  padding: 0
+  margin: 0
+
+body
+  position: absolute
+  top: 0
+  right: 0
+  bottom: 0
+  left: 0
   :font-family 'TGL 31034-2'
   :color white
-  :background black url('hdr.jpg') 
+  :background black url('hdr.jpg')
   :background-size cover
+  background-repeat: no-repeat
   :background-origin border-box
   :font-size 1.5em
   a:link, a:visited
@@ -15,9 +26,11 @@ body
   a:hover
     :text-decoration underline
   .rotationPart
-    :-webkit-transform translate(10%, 5%) rotate(-10deg)
+    :-webkit-transform translate(10%, 5%) rotateZ(-10deg)
+    transform: translate(10%, 5%) rotateZ(-10deg)
     :padding-top 50px
     :margin-bottom 100px
+    width: 75%
     h1
       :font-size 4em
       :margin 0
